--- a/PersonalBlog/PersonalBlog-system/pom.xml
+++ b/PersonalBlog/PersonalBlog-system/pom.xml
@@ -11,11 +11,11 @@
 
     <artifactId>PersonalBlog-system</artifactId>
 
-    <description></description>
+    <description>system系统模块</description>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
 </project>
