--- a/PersonalBlog/pom.xml
+++ b/PersonalBlog/pom.xml
@@ -4,9 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+<!--    组织名称   -->
     <groupId>org.blog</groupId>
+<!--    模块名称/  -->
     <artifactId>PersonalBlog</artifactId>
+<!--    项目版本   -->
     <version>1.0-SNAPSHOT</version>
+<!--    子模块  -->
     <modules>
         <module>PersonalBlog-admin</module>
         <module>PersonalBlog-common</module>
@@ -17,8 +21,19 @@
     <packaging>pom</packaging>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>2.2.13.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
