--- a/personal-blog-front/package.json
+++ b/personal-blog-front/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-plus": "^2.7.2",
     "vue": "^3.2.13",
     "vue-router": "^4.3.2"
   },
@@ -40,5 +41,8 @@
     "last 2 versions",
     "not dead",
     "not ie 11"
-  ]
+  ],
+  "rules": {
+    "vue/multi-word-component-names": "off"
+  }
 }
