--- a/PersonalBlog/PersonalBlog-admin/pom.xml
+++ b/PersonalBlog/PersonalBlog-admin/pom.xml
@@ -33,7 +33,30 @@
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.blog</groupId>
+            <artifactId>PersonalBlog-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.blog</groupId>
+            <artifactId>PersonalBlog-system</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.blog</groupId>
+            <artifactId>PersonalBlog-test</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 <!--        <dependency>-->
+<!--            <groupId>org.blog</groupId>-->
+<!--            <artifactId>PersonalBlog-common</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
+        <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-test</artifactId>-->
 <!--            <scope>test</scope>-->
