--- a/PersonalBlog/PersonalBlog-test/pom.xml
+++ b/PersonalBlog/PersonalBlog-test/pom.xml
@@ -11,9 +11,19 @@
 
     <artifactId>PersonalBlog-test</artifactId>
 
+    <description>
+        测试模块
+    </description>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 </project>
