--- a/PersonalBlog/pom.xml
+++ b/PersonalBlog/pom.xml
@@ -15,6 +15,8 @@
         <module>PersonalBlog-admin</module>
         <module>PersonalBlog-common</module>
         <module>PersonalBlog-system</module>
+        <module>PersonalBlog-test</module>
+        <module>untitled</module>
     </modules>
 
     <!--  表明这只是一个管理的Maven pom  -->
